Analisando o modelo final e exportando-o

--- a/Regressao_Linear/FIAP/Atividade_Fase5/01_exploratory_analysis.ipynb
+++ b/Regressao_Linear/FIAP/Atividade_Fase5/01_exploratory_analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "4          25.76   8800  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "<Axes: ylabel='Temperature_C'>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -483,16 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x24276ef1450>"
+       "<seaborn.axisgrid.PairGrid at 0x26fc97ff0a0>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -520,16 +520,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x24270046ec0>"
+       "<seaborn.axisgrid.PairGrid at 0x26fc9f83550>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "4   8800                False             False                 False  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
        "       3, 3])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,16 +748,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x24271c37370>"
+       "<seaborn.axisgrid.PairGrid at 0x26fc9f604f0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
        "4   8800              False           False               False  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.968\n",
       "Method:                 Least Squares   F-statistic:                     4732.\n",
       "Date:                Sat, 01 Mar 2025   Prob (F-statistic):          1.59e-117\n",
-      "Time:                        12:51:21   Log-Likelihood:                -1692.5\n",
+      "Time:                        18:30:30   Log-Likelihood:                -1692.5\n",
       "No. Observations:                 156   AIC:                             3389.\n",
       "Df Residuals:                     154   BIC:                             3395.\n",
       "Df Model:                           1                                         \n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.987\n",
       "Method:                 Least Squares   F-statistic:                     4030.\n",
       "Date:                Sat, 01 Mar 2025   Prob (F-statistic):          1.36e-144\n",
-      "Time:                        12:51:22   Log-Likelihood:                -1619.8\n",
+      "Time:                        18:30:30   Log-Likelihood:                -1619.8\n",
       "No. Observations:                 156   AIC:                             3248.\n",
       "Df Residuals:                     152   BIC:                             3260.\n",
       "Df Model:                           3                                         \n",
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
        "4                0.0             0.0                 0.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
        "Text(0, 0.5, 'Resíduos')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
        "4          0.160                0.0             0.0                 0.0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1414,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.988\n",
       "Method:                 Least Squares   F-statistic:                     1818.\n",
       "Date:                Sat, 01 Mar 2025   Prob (F-statistic):          4.35e-140\n",
-      "Time:                        12:51:22   Log-Likelihood:                -1613.8\n",
+      "Time:                        18:30:31   Log-Likelihood:                -1613.8\n",
       "No. Observations:                 156   AIC:                             3244.\n",
       "Df Residuals:                     148   BIC:                             3268.\n",
       "Df Model:                           7                                         \n",
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
        "4    1.0       0.356246                0.0             0.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1585,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.988\n",
       "Method:                 Least Squares   F-statistic:                     4140.\n",
       "Date:                Sat, 01 Mar 2025   Prob (F-statistic):          1.80e-145\n",
-      "Time:                        12:51:22   Log-Likelihood:                -1617.8\n",
+      "Time:                        18:30:31   Log-Likelihood:                -1617.8\n",
       "No. Observations:                 156   AIC:                             3244.\n",
       "Df Residuals:                     152   BIC:                             3256.\n",
       "Df Model:                           3                                         \n",
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1641,7 @@
        "Text(0, 0.5, 'Resíduos')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1751,7 @@
        "4  7704.492815  1095.507185                0.0             0.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1814,7 @@
        "Text(0, 0.5, 'Resíduos')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
