--- a/Processamento_Linguagem_Natural/PLN_spaCy/intro_spacy.ipynb
+++ b/Processamento_Linguagem_Natural/PLN_spaCy/intro_spacy.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4007e588",
    "metadata": {},
    "outputs": [
@@ -59,13 +59,7 @@
       "\u001b[38;5;3m⚠ As of spaCy v3.0, shortcuts like 'pt' are deprecated. Please use the\n",
       "full pipeline package name 'pt_core_news_sm' instead.\u001b[0m\n",
       "Collecting pt-core-news-sm==3.8.0\n",
-      "  Downloading https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl (13.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.0/13.0 MB\u001b[0m \u001b[31m42.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pt-core-news-sm\n",
-      "Successfully installed pt-core-news-sm-3.8.0\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "  Using cached https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl (13.0 MB)\n",
       "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('pt_core_news_sm')\n"
      ]
@@ -88,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a603a2de",
    "metadata": {},
    "outputs": [],
@@ -107,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "657829a7",
    "metadata": {},
    "outputs": [],
@@ -117,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "b4f30272",
    "metadata": {},
    "outputs": [
@@ -171,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f3eedc07",
    "metadata": {},
    "outputs": [
@@ -477,7 +471,7 @@
        "19    False  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "4be0984c",
    "metadata": {},
    "outputs": [
@@ -557,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "67305514",
    "metadata": {},
    "outputs": [
@@ -715,7 +709,7 @@
        "19              .              ."
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "ebe2f9cf",
    "metadata": {},
    "outputs": [
@@ -744,7 +738,7 @@
        "['encontrar', 'encontrar', 'encontrar']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "36583146",
    "metadata": {},
    "outputs": [
@@ -773,7 +767,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package rslp to /home/wolf/nltk_data...\n",
-      "[nltk_data]   Package rslp is already up-to-date!\n"
+      "[nltk_data]   Unzipping stemmers/rslp.zip.\n"
      ]
     },
     {
@@ -782,7 +776,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "d5ede28b",
    "metadata": {},
    "outputs": [
@@ -814,7 +808,7 @@
        "'aprend'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "ec4b02bf",
    "metadata": {},
    "outputs": [
@@ -872,11 +866,222 @@
     "for token in doc:\n",
     "    print(token.text, token.lemma_, stemmer.stem(token.text))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "570ff0ac",
+   "metadata": {},
+   "source": [
+    "## Reconhecimento de entidades nomeadas\n",
+    "\n",
+    "- NER (Named-Entity Recognition).\n",
+    "- Encontrar e classificar entidades no texto, dependendo da base de dados que foi utilizada para o treinamento (pessoa, localização, empresa, numéricos).\n",
+    "- Usado em chatbots para saber o assunto falado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "14f3af28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto = 'A IBM é uma empresa dos Estados Unidos voltada para a área de informática. Sua sede no Brasil fica em São Paulo e a receita em 2018 foi de aproximadamente 320 bilhões de reais'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "68e0bcaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = pln(texto)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab99725f",
+   "metadata": {},
+   "source": [
+    "Para acessar as entidades nomeadas, basta acessar pela propriedade *ents*.\n",
+    "\n",
+    "No caso, o algoritmo identificou que IBM é uma organização (ORG) e os demais são localizações (LOC)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "751fe623",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IBM ORG\n",
+      "Estados Unidos LOC\n",
+      "Brasil LOC\n",
+      "São Paulo LOC\n"
+     ]
+    }
+   ],
+   "source": [
+    "for entidade in doc.ents:\n",
+    "    print(entidade.text, entidade.label_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d8ec30b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">A \n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    IBM\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       " é uma empresa dos \n",
+       "<mark class=\"entity\" style=\"background: #ff9561; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Estados Unidos\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOC</span>\n",
+       "</mark>\n",
+       " voltada para a área de informática. Sua sede no \n",
+       "<mark class=\"entity\" style=\"background: #ff9561; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Brasil\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOC</span>\n",
+       "</mark>\n",
+       " fica em \n",
+       "<mark class=\"entity\" style=\"background: #ff9561; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    São Paulo\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOC</span>\n",
+       "</mark>\n",
+       " e a receita em 2018 foi de aproximadamente 320 bilhões de reais</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from spacy import displacy\n",
+    "\n",
+    "displacy.render(doc,\n",
+    "                style='ent', # enfatizar as entidades\n",
+    "                jupyter=True) # True para exibir com uma estilização no Jupyter Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "063e8290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto = 'Bill Gates nasceu em Seattle em 28/10/1955 e foi o criador da Microsoft'\n",
+    "doc = pln(texto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f9b43f34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bill Gates PER\n",
+      "Seattle LOC\n",
+      "Microsoft ORG\n"
+     ]
+    }
+   ],
+   "source": [
+    "for entidade in doc.ents:\n",
+    "    print(entidade.text, entidade.label_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c15aca3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Bill Gates\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PER</span>\n",
+       "</mark>\n",
+       " nasceu em \n",
+       "<mark class=\"entity\" style=\"background: #ff9561; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Seattle\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOC</span>\n",
+       "</mark>\n",
+       " em 28/10/1955 e foi o criador da \n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Microsoft\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       "</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "displacy.render(doc,\n",
+    "                style='ent',\n",
+    "                jupyter=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b4617f4",
+   "metadata": {},
+   "source": [
+    "Buscando apenas as entidades do tipo PER (pessoa)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "25f180a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bill Gates\n"
+     ]
+    }
+   ],
+   "source": [
+    "for entidade in doc.ents:\n",
+    "    if entidade.label_ == 'PER':\n",
+    "        print(entidade.text)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spero-env",
+   "display_name": "ai_env",
    "language": "python",
    "name": "python3"
   },
@@ -890,7 +1095,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
