continuando com a classificação de sentimentos com spacy

--- a/Processamento_Linguagem_Natural/PLN_spaCy/classificacao_sentimentos_spacy.ipynb
+++ b/Processamento_Linguagem_Natural/PLN_spaCy/classificacao_sentimentos_spacy.ipynb
@@ -30,7 +30,7 @@
      "text": [
       "Collecting pt-core-news-sm==3.8.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl (13.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.0/13.0 MB\u001b[0m \u001b[31m34.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.0/13.0 MB\u001b[0m \u001b[31m15.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('pt_core_news_sm')\n"
      ]
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "ab34683b",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "d7b6ee27",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "4                  adoro como você  alegria"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "c1dc10d6",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "195                                    isso me apavora   medo"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "2b97596b",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        "(196, 2)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "612e8c2e",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "5fbb0f57",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "Text(0, 0.5, 'Contagem')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -320,6 +320,428 @@
     "sns.countplot(df, x='emocao')\n",
     "plt.xlabel('Emoção')\n",
     "plt.ylabel('Contagem')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33ac24a9",
+   "metadata": {},
+   "source": [
+    "## Função para Pré-Processamento dos textos\n",
+    "\n",
+    "Neste processo, dado um texto, iremos fazer o processo de remoçãod e pontuações e stopwords. Iremos utilizar alguns recursos que utilizamos no notebook *intro_spacy.ipynb*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "44ce6715",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pontuacoes = string.punctuation\n",
+    "pontuacoes # Iremos remover todos estes caracteres dos textos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "69f2fbe9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "416"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from spacy.lang.pt.stop_words import STOP_WORDS\n",
+    "stop_words = STOP_WORDS\n",
+    "len(stop_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "46e2d8f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instanciando o modelo spaCy\n",
+    "pln = spacy.load('pt_core_news_sm')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82737ecf",
+   "metadata": {},
+   "source": [
+    "Ao invés de retornarmos as palavras originais, iremos retornar o *lemma* (lematização).\n",
+    "\n",
+    "**OBS:**\n",
+    "A forma mostrada pelo prof para remover os stopwords e pontuações não funcionou tão bem, porém as propriedades *is_stop* e *is_punct* tiveram um efeito mais eficaz no dataset.\n",
+    "\n",
+    "A função abaixo aplica a lematização, remove pontuações, stopwords e digitos numéricos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bc12d99f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocessamento(texto: str):\n",
+    "    texto = texto.lower()\n",
+    "    doc = pln(texto) # Adiciona o texto para o modelo pln, para realizar o processamento posteriormente\n",
+    "    lista: list[str] = [] # A ideia é adicionar os valores já processados dentro dessa lista\n",
+    "    \n",
+    "    for token in doc:\n",
+    "        if not token.is_stop and not token.is_punct:\n",
+    "            lista.append(token.lemma_) # Adiciona o lemma das palavras\n",
+    "            \n",
+    "    #lista = [palavra for palavra in lista if palavra not in stop_words and palavra not in pontuacoes]\n",
+    "    \n",
+    "    lista = ' '.join(str(palavra) for palavra in lista if not palavra.isdigit()) # isdigit() remove os digitos numéricos\n",
+    "    \n",
+    "    return lista"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcb3d086",
+   "metadata": {},
+   "source": [
+    "Caso de teste (estranho):\n",
+    "\n",
+    "Quando não é colocado ponto final na frase: *\"Estou aprendendo processamento de linguagem natural, Curso em Curitiba\"*, a palavra \"curitiba\" fica \"curitber\" (?). Portanto, colocando o ponto final na frase, resolveu este problema estranho."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "04e198a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aprender processamento linguagem natural curso curitber'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teste = preprocessamento(\"Estou aPrendendo processamento de linguagem natural, Curso em Curitiba\")\n",
+    "teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ca9e9159",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aprender processamento linguagem natural curso curitiba setembro'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teste = preprocessamento(\"Estou aPrendendo processamento de linguagem natural, Curso em Curitiba, em 12 de Setembro.\")\n",
+    "teste"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "186bc51f",
+   "metadata": {},
+   "source": [
+    "## Pré-processamento da base de dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "faec354f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['texto_processado'] = [preprocessamento(texto) for texto in df['texto']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cbd6ee99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# o professor fez assim, forma interessante com o \"apply\":\n",
+    "df['texto_processado'] = df['texto'].apply(preprocessamento) # não é necessário passar explicitamente o parametro texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c063d440",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>texto</th>\n",
+       "      <th>emocao</th>\n",
+       "      <th>texto_processado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>este trabalho é agradável</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>trabalho agradável</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gosto de ficar no seu aconchego</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>gostar ficar aconchego</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>fiz a adesão ao curso hoje</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>fiz adesão curso hoje</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>eu sou admirada por muitos</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>admirar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>adoro como você</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>adorar</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             texto   emocao        texto_processado\n",
+       "0        este trabalho é agradável  alegria      trabalho agradável\n",
+       "1  gosto de ficar no seu aconchego  alegria  gostar ficar aconchego\n",
+       "2       fiz a adesão ao curso hoje  alegria   fiz adesão curso hoje\n",
+       "3       eu sou admirada por muitos  alegria                 admirar\n",
+       "4                  adoro como você  alegria                  adorar"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37a8fbb6",
+   "metadata": {},
+   "source": [
+    "## Tratamento da classe\n",
+    "\n",
+    "Precisamos deixar a nossa base de dados com a mesma estrutura abaixo (requerida pelo spaCy), para então depois enviar para o modelo de deep learning do spaCy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2783032b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exemplo_base_dados = [[\"este trabalho é agradável\", {\"ALEGRIA\": True, \"MEDO\": False}],\n",
+    "                      [\"este lugar continua assustador\", {\"ALEGRIA\": False, \"MEDO\": True}]]\n",
+    "type(exemplo_base_dados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "15efcffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['este trabalho é agradável', {'ALEGRIA': True, 'MEDO': False}]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exemplo_base_dados[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f12ed68d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['trabalho agradável', {'ALEGRIA': True, 'MEDO': False}],\n",
+       " 'este trabalho é agradável',\n",
+       " 'alegria')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply para gerar o formato padrão dos rótulos\n",
+    "textos, rotulos = df['texto_processado'], df['emocao'].apply(lambda x: {\"ALEGRIA\": True, \"MEDO\": False} if x == 'alegria' else {\"ALEGRIA\": False, \"MEDO\": True})\n",
+    "\n",
+    "# zip para juntar textos e rótulos, retorna um array com os dois dados necessários: X (texto, variável independente) e y (rótulo, variável dependente)\n",
+    "base_dados_final = [[x, y] for x, y, in zip(textos, rotulos)]\n",
+    "base_dados_final[0], df['texto'][0], df['emocao'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "74a36bd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['ei cuidado bater poste', {'ALEGRIA': False, 'MEDO': True}],\n",
+       " 'ei cuidado você vai bater no poste!',\n",
+       " 'medo')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_dados_final[150], df['texto'][150], df['emocao'][150]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e8882188",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "196"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(base_dados_final)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91f5bd4c",
+   "metadata": {},
+   "source": [
+    "## Criação do classificador (rede neural)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1ee238a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo = spacy.blank('pt')\n",
+    "\n",
+    "categorias = modelo.add_pipe('textcat') # textcat = categorização de texto\n",
+    "\n",
+    "# Adiciona os tipos de rótulos\n",
+    "categorias.add_label('ALEGRIA')\n",
+    "categorias.add_label('MEDO')\n",
+    "\n",
+    "historico = []"
    ]
   }
  ],
