Testando algumas frases com o modelo treinado

--- a/Processamento_Linguagem_Natural/PLN_spaCy/classificacao_sentimentos_spacy.ipynb
+++ b/Processamento_Linguagem_Natural/PLN_spaCy/classificacao_sentimentos_spacy.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "O spaCy utiliza de recursos de redes neurais convolucionais para fazer a classificação.\n",
     "\n",
-    "Utilizaremos um dataset de frases em português anotados com dois rótulos: alegria e medo.\n",
+    "Utilizaremos um dataset de frases em português anotados com dois rótulos: alegria e medo. Porém, com este dataset não será possível ter uma pontuação muito boa, pelo fato de que é muito pequeno. Para um modelo ser considerado bom deve ser alimentado com uma massa de dados bem maior do que apenas 196 frases (que é o caso desse nosso dataset de estudo).\n",
     "\n",
     "**OBS.** É bem difícil encontrar bases de dados textuais em português. Em geral, quando é necessário desenvolver aplicações de PLN em português é necessário construir o próprio corpus (base de dados). Normalmente, a lingua comum em bases de dados encontradas é o inglês."
    ]
@@ -877,6 +877,127 @@
    "outputs": [],
    "source": [
     "modelo.to_disk(\"modelo_alegria_medo\") # Será gerado uma pasta com os pesos e arquivos necessários"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90745614",
+   "metadata": {},
+   "source": [
+    "## Testes com uma frase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "cb6fd85f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<spacy.lang.pt.Portuguese at 0x7fb7d6826710>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelo_treinado = spacy.load(\"modelo_alegria_medo\")\n",
+    "modelo_treinado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "fe9635dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'adorar cor olho'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texto_alegria = \"eu adoro a cor dos seus olhos\"\n",
+    "\n",
+    "texto_alegria = preprocessamento(texto_alegria)\n",
+    "texto_alegria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "c222ad39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "adorar cor olho"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "previsao = modelo_treinado(texto_alegria)\n",
+    "previsao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "530d11b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ALEGRIA': 1.0, 'MEDO': 2.8992026557261852e-08}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "previsao.cats # 100% de certeza que o sentimento é de alegria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0f2e3779",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ALEGRIA': 2.2099307273037994e-07, 'MEDO': 0.9999997615814209}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texto_medo = \"estou com medo dele\"\n",
+    "\n",
+    "previsao = modelo_treinado(preprocessamento(texto_medo))\n",
+    "previsao.cats"
    ]
   }
  ],
